--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="root"></div>
   <script type="text/babel">
-  class App extends React.Component {
+    class App extends React.Component {
       state = {
         inputValue: "",
         isAddedOmenShown: false,
@@ -30,7 +30,6 @@
         const drawedNumber = Math.floor(Math.random() * this.state.omens.length)
 
         const omen = this.state.omens[drawedNumber]
-        //console.log(omen)
 
         this.setState({
           omen,
@@ -74,10 +73,12 @@
           <div>
             <button onClick={this.handleClick}>Draw message</button>
             {this.showDrawedOmen()}
-            <form onSubmit={this.handleFormSubmit}> <br /> <br />
-              <input type="text" value={this.state.inputValue} onChange={this.handleInputChange} /> <br /> <br />
-              <button>Add message</button>
-            </form>
+
+            <Form
+              onSubmit={this.handleFormSubmit}
+              value={this.state.inputValue}
+              onChange={this.handleInputChange}
+            />
 
             {this.showAddedOmen()}
           </div>
@@ -85,6 +86,14 @@
       }
     }
 
+    const Form = (props) => {
+      return (
+        <form onSubmit={props.onSubmit}> <br /> <br />
+          <input type="text" value={props.value} onChange={props.onChange} /> <br /> <br />
+          <button>Add message</button>
+        </form>
+      )
+    }
 
     ReactDOM.render(<App />, document.getElementById('root'))
 
